♻️(helm) separate PostHog ingress
Based on feedback from @rouja, I've updated the Helm configuration for PostHog
to use separate ingress resources for each service. Although the documentation
suggests sharing the same ingress, the services have different externalName
values, which conflicts with the use of a vhost in the ingress annotations.
This change ensures proper service redirection by aligning each service with
its own ingress.

--- a/src/helm/meet/templates/posthog_assets_svc.yaml
+++ b/src/helm/meet/templates/posthog_assets_svc.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.posthog.ingress.enabled -}}
+{{- if .Values.posthog.ingressAssets.enabled -}}
 {{- $envVars := include "meet.common.env" (list . .Values.posthog) -}}
 {{- $fullName := include "meet.posthog.fullname" . -}}
 {{- $component := "posthog" -}}
