--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -2,7 +2,7 @@
 # Meet package
 #
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
