wip connect minio

--- a/src/helm/meet/templates/secrets.yaml
+++ b/src/helm/meet/templates/secrets.yaml
@@ -15,3 +15,12 @@ stringData:
   OIDC_RP_CLIENT_SECRET: {{ .Values.oidc.clientSecret }}
   LIVEKIT_API_SECRET: {{ .Values.livekitApi.secret }}
   LIVEKIT_API_KEY: {{ .Values.livekitApi.key }}
+{{- if .Values.minioAccessKey }}
+  MINIO_ACCESS_KEY: {{ .Values.minioAccessKey }}
+{{- end }}
+{{- if .Values.minioSecretKey }}
+  MINIO_SECRET_KEY: {{ .Values.minioSecretKey }}
+{{- end }}
+{{- if .Values.minioUrl }}
+  MINIO_URL: {{ .Values.minioUrl }}
+{{- end }}
