--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "whitenoise==6.7.0",
     "mozilla-django-oidc==4.0.1",
     "livekit-api==0.7.0",
+    "minio==7.2.9",
 ]
 
 [project.urls]
