--- a/src/helm/meet/templates/secrets.yaml
+++ b/src/helm/meet/templates/secrets.yaml
@@ -24,3 +24,6 @@ stringData:
 {{- if .Values.minioUrl }}
   MINIO_URL: {{ .Values.minioUrl }}
 {{- end }}
+{{- if .Values.openaiApiKey }}
+  OPENAI_API_KEY: {{ .Values.openaiApiKey }}
+{{- end }}
