wip revert minio

--- a/src/helm/meet/templates/secrets.yaml
+++ b/src/helm/meet/templates/secrets.yaml
@@ -18,3 +18,13 @@ stringData:
 {{- if .Values.openaiApiKey }}
   OPENAI_API_KEY: {{ .Values.openaiApiKey }}
 {{- end }}
+{{- if .Values.minioAccessKey }}
+  MINIO_ACCESS_KEY: {{ .Values.minioAccessKey }}
+{{- end }}
+{{- if .Values.minioSecretKey }}
+  MINIO_SECRET_KEY: {{ .Values.minioSecretKey }}
+{{- end }}
+{{- if .Values.minioUrl }}
+  MINIO_URL: {{ .Values.minioUrl }}
+{{- end }}
+
