💩(summary) vendor a first draft
This is written in a rush, boostrap the real logic with celery
worker to process meeting recording.

Lack of unit tests is critical, I am not proud of a it. I am
totally in a hurry for the demo. Not sure we will actually keep
this microservice.

--- a/src/summary/pyproject.toml
+++ b/src/summary/pyproject.toml
@@ -7,6 +7,11 @@ dependencies = [
     "uvicorn>=0.24.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "celery==5.4.0",
+    "redis==4.5.4",
+    "minio==7.2.9",
+    "openai==1.51.2",
+    "requests==2.32.3",
 ]
 
 [project.optional-dependencies]
