wip setup redis and celery

--- a/src/summary/compose.yaml
+++ b/src/summary/compose.yaml
@@ -1,4 +1,8 @@
 services:
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
   app:
     container_name: app
     build: .
@@ -10,3 +14,14 @@ services:
     restart: always
     env_file:
       ".env"
+    depends_on:
+      - redis
+  celery_worker:
+    container_name: celery_worker
+    build: .
+    command: celery -A summary.celery_worker worker --pool=solo --loglevel=info
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+      - app
