--- a/src/summary/pyproject.toml
+++ b/src/summary/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "uvicorn>=0.24.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "celery==5.4.0",
+    "redis==4.5.4",
 ]
 
 [project.optional-dependencies]
