--- a/src/summary/pyproject.toml
+++ b/src/summary/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "celery==5.4.0",
     "redis==4.5.4",
+    "minio==7.2.9",
 ]
 
 [project.optional-dependencies]
