wip introduce open ai call

--- a/src/summary/pyproject.toml
+++ b/src/summary/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "celery==5.4.0",
     "redis==4.5.4",
     "minio==7.2.9",
+    "openai==1.51.2"
 ]
 
 [project.optional-dependencies]
