wip post response to webhook

--- a/src/summary/pyproject.toml
+++ b/src/summary/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "celery==5.4.0",
     "redis==4.5.4",
     "minio==7.2.9",
-    "openai==1.51.2"
+    "openai==1.51.2",
+    "requests==2.32.3",
 ]
 
 [project.optional-dependencies]
