🔧(backend) enable recording and storage hook
Update values for dev and staging environment to enable
recording-related endpoints. A new secret need to be created.

Production values will be added in an upcoming commit.

--- a/src/helm/meet/templates/secrets.yaml
+++ b/src/helm/meet/templates/secrets.yaml
@@ -15,3 +15,4 @@ stringData:
   OIDC_RP_CLIENT_SECRET: {{ .Values.oidc.clientSecret }}
   LIVEKIT_API_SECRET: {{ .Values.livekitApi.secret }}
   LIVEKIT_API_KEY: {{ .Values.livekitApi.key }}
+  RECORDING_STORAGE_EVENT_TOKEN: {{ .Values.recordingStorageEventToken }}
