♻️(tilt) simplify the local stack
This commit solves few issues:
- sharing the relevant certificates with minio so when triggering the webhook
notification, the minio pod can verify our backend domain certificates.
- making sure everything spawn in the right namespace (LiveKit and the Egress)
without relying on a dirty fix in the make start-tilt.

all these fixes were made by @rouja, I don't fully understand them yet.
He simplified the stack, removing two Kind nodes to make it lightweight.

thx @rouja.

--- a/src/helm/helmfile.yaml
+++ b/src/helm/helmfile.yaml
@@ -66,6 +66,13 @@ releases:
           annotations:
             nginx.ingress.kubernetes.io/proxy-body-size: "0"
             kubernetes.io/ingress.class: nginx
+        extraVolumes:
+          - name: mkcert
+            secret:
+              secretName: mkcert
+        extraVolumeMounts:
+          - mountPath: /certs/CAs/
+            name: mkcert
 
   - name: redis
     installed: {{ eq .Environment.Name "dev" | toYaml }}
