--- a/src/summary/Dockerfile
+++ b/src/summary/Dockerfile
@@ -13,5 +13,8 @@ WORKDIR /app
 COPY --from=builder /usr/local /usr/local
 COPY ./summary /app/summary
 
+# Un-privileged user running the application
+ARG DOCKER_USER=1000:1000
+USER ${DOCKER_USER}
 
 CMD ["uvicorn", "summary.main:app", "--proxy-headers", "--host", "0.0.0.0", "--port", "8000"]
