✨(summary) enable sentry monitoring
Necessary to monitor how the micro service acts.
Will tweak sentry configurations later on.

--- a/src/summary/pyproject.toml
+++ b/src/summary/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "minio==7.2.9",
     "openai==1.51.2",
     "requests==2.32.3",
+    "sentry-sdk[fastapi, celery]==2.19.0",
 ]
 
 [project.optional-dependencies]
