📝(helm) generate documentation for summary microservices
Run the generate-readme script to add the documentation related to
the newly introduced microservice.

--- a/src/helm/meet/values.yaml
+++ b/src/helm/meet/values.yaml
@@ -474,6 +474,7 @@ celery:
     targetPort: 8000
     annotations: {}
 
+  ## @param celery.probes Configure celery probes
   ## @param celery.probes.liveness.path [nullable] Configure path for celery HTTP liveness probe
   ## @param celery.probes.liveness.targetPort [nullable] Configure port for celery HTTP liveness probe
   ## @param celery.probes.liveness.initialDelaySeconds [nullable] Configure initial delay for celery liveness probe
