➕(backend) install brevo client
Brevo (ex-sendinblue) is a common solution used for marketing and
communications.

--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -27,6 +27,7 @@ requires-python = ">=3.10"
 dependencies = [
     "boto3==1.35.90",
     "Brotli==1.1.0",
+    "brevo-python==1.1.2",
     "celery[redis]==5.4.0",
     "django-configurations==2.5.1",
     "django-cors-headers==4.6.0",
